<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <View
          android:id="@+id/buffer"
          android:name="buffer"
        	 android:background="#000000"
        	 android:layout_width="20dp"
        	 android:layout_height="40dp"
        	 android:layout_centerHorizontal="true"/>
        
        <TextView
	      android:id="@+id/controls_text"
	      android:name="controlsText"
	   	android:layout_width="wrap_content"
	      android:layout_height="fill_parent"
	      android:layout_gravity="center"
	      android:layout_below="@id/buffer"
	      android:layout_margin="15dp"
	      android:text="@string/controls_text"
	      android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
	      android:id="@+id/interface_title"
	      android:name="interfaceTitle"
	   	android:layout_width="wrap_content"
	      android:layout_height="fill_parent"
	      android:layout_gravity="center"
	      android:layout_below="@id/controls_text"
	      android:layout_margin="5dp"
	      android:text="@string/interface_title_text"
	      android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <LinearLayout
         android:id="@+id/menu_layout"
         android:layout_width="match_parent"
		   android:layout_height="match_parent"
		   android:orientation="horizontal"
		   android:layout_below="@id/interface_title">
            
           <ImageView
		      android:id="@+id/help_menu_image"
		      android:name="menuImage"
		      android:layout_margin="10dp"
		      android:layout_width="30dp"
		      android:layout_height="30dp"
		      android:layout_gravity="center"
		      android:background="@null"
		      android:scaleType="fitCenter"
		      android:src="@drawable/menu_icon" />
	        
	        <TextView
		      android:id="@+id/menu_text"
		      android:name="menuText"
		   	android:layout_width="wrap_content"
		      android:layout_height="fill_parent"
		      android:layout_gravity="center"
		      android:layout_margin="5dp"
		      android:text="@string/menu_text"
		      android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </LinearLayout>
        
        <LinearLayout
         android:id="@+id/texture_layout"
         android:layout_width="match_parent"
		   android:layout_height="match_parent"
		   android:orientation="horizontal"
		   android:layout_below="@id/menu_layout">
            
           <ImageView
		      android:id="@+id/help_texture_image"
		      android:name="textureImage"
		      android:layout_margin="10dp"
		      android:layout_width="30dp"
		      android:layout_height="30dp"
		      android:layout_gravity="center"
		      android:background="@null"
		      android:scaleType="fitCenter"
		      android:src="@drawable/content_picture" />
	        
	        <TextView
		      android:id="@+id/texture_text"
		      android:name="textureText"
		   	android:layout_width="wrap_content"
		      android:layout_height="fill_parent"
		      android:layout_gravity="center"
		      android:layout_margin="5dp"
		      android:text="@string/texture_text"
		      android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </LinearLayout>
        
        <LinearLayout
         android:id="@+id/options_layout"
         android:layout_width="match_parent"
		   android:layout_height="match_parent"
		   android:orientation="horizontal"
		   android:layout_below="@id/texture_layout">
            
           <ImageView
		      android:id="@+id/help_options_image"
		      android:name="optionsImage"
		      android:layout_margin="10dp"
		      android:layout_width="30dp"
		      android:layout_height="30dp"
		      android:layout_gravity="center"
		      android:background="@null"
		      android:scaleType="fitCenter"
		      android:src="@drawable/action_settings" />
	        
	        <TextView
		      android:id="@+id/options_text"
		      android:name="optionsText"
		   	android:layout_width="wrap_content"
		      android:layout_height="fill_parent"
		      android:layout_margin="5dp"
		      android:text="@string/option_text"
		      android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </LinearLayout>
        
        <LinearLayout
         android:id="@+id/camera_layout"
         android:layout_width="match_parent"
		   android:layout_height="match_parent"
		   android:orientation="horizontal"
		   android:layout_below="@id/options_layout">
           
            <LinearLayout
               android:layout_width="wrap_content"
				   android:layout_height="match_parent"
				   android:orientation="vertical"
				   android:layout_margin="5dp">
				   
	            <ImageView
				      android:id="@+id/help_camera_image"
				      android:name="textureImage"
				      android:layout_margin="5dp"
				      android:layout_width="30dp"
				      android:layout_height="30dp"
				      android:background="@null"
				      android:scaleType="fitCenter"
				      android:src="@drawable/camera" />     
				      
	             <ImageView
				      android:id="@+id/help_light_image"
				      android:name="textureImage"
				      android:layout_margin="5dp"
				      android:layout_width="30dp"
				      android:layout_height="30dp"
				      android:background="@null"
				      android:scaleType="fitCenter"
				      android:src="@drawable/light1" />
            </LinearLayout>
           
	        <TextView
		      android:id="@+id/object_text"
		      android:name="objectText"
		   	android:layout_width="wrap_content"
		      android:layout_height="fill_parent"
		      android:layout_gravity="center"
		      android:layout_margin="5dp"
		      android:text="@string/camera_text"
		      android:textAppearance="?android:attr/textAppearanceSmall" />
            
        </LinearLayout>
        
    </RelativeLayout>
    

</ScrollView>