<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/filler_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="" />
    
    <LinearLayout 
      android:id="@+id/view_model_linear"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
        
        <ImageView
          android:id="@+id/view_model_image"
          android:name="viewModelImage"
          android:layout_margin="3dp"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_gravity="center"
          android:background="@null"
          android:scaleType="fitCenter"
          android:src="@drawable/wireframe_cube" />
       
      <TextView
         android:id="@+id/view_model_text"
         android:name="viewModelText"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:layout_margin="3dp"
         android:padding="3dp"
         android:text="@string/view_model_text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
    <LinearLayout 
      android:id="@+id/gallery_linear"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
        
        <ImageView
          android:id="@+id/gallery_view_image"
          android:name="viewGalleryImage"
          android:layout_margin="3dp"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_gravity="center"
          android:background="@null"
          android:scaleType="fitCenter"
          android:state_enabled="false"
          android:src="@drawable/gallery_icon_new" />
       
      <TextView
         android:id="@+id/gallery_text"
         android:name="galleryText"
         android:layout_marginBottom="15dp"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:layout_margin="3dp"
         android:padding="3dp"
         android:text="@string/gallery_text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
   
    <LinearLayout 
      android:id="@+id/help_linear"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
        
        <ImageView
          android:id="@+id/help_activity_image"
          android:name="helpImage"
          android:layout_margin="3dp"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_gravity="center"
          android:background="@null"
          android:scaleType="fitCenter"
          android:src="@drawable/help_icon" />
       
      <TextView
         android:id="@+id/help_text"
         android:name="helpText"
         android:layout_marginBottom="15dp"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:layout_margin="3dp"
         android:padding="3dp"
         android:text="@string/help_text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
    <LinearLayout 
      android:id="@+id/options_linear"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
        
        <ImageView
          android:id="@+id/options_image"
          android:name="optionsImage"
          android:layout_margin="3dp"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_gravity="center"
          android:background="@null"
          android:scaleType="fitCenter"
          android:src="@drawable/settings_icon" />
       
      <TextView
         android:id="@+id/options_text"
         android:name="optionsText"
         android:layout_marginBottom="15dp"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:layout_margin="3dp"
         android:padding="3dp"
         android:text="@string/options_text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>
    
</LinearLayout>